Fix up the tests